force-app/main/default/objects/Account/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the account is active or not.</description>
    <inlineHelpText>Active Status</inlineHelpText>
    <label>Activation</label>
    <type>Checkbox</type>
</CustomField>