force-app/main/default/objects/Account/fields/My_City__c.field-meta.xml
<CustomField>
    <fullName>My_City__c</fullName>
    <label>My City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>