force-app/main/default/objects/Account/fields/My_District__c.field-meta.xml
<CustomField>
    <fullName>My_District__c</fullName>
    <label>My District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>My_City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Sitapur</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>BaaghPat</fullName>
            </value>
            <value>
                <fullName>Ayodhya</fullName>
            </value>
            <value>
                <fullName>Prayagraj</fullName>
            </value>
            <value>
                <fullName>Sonepat</fullName>
            </value>
            <value>
                <fullName>Panipat</fullName>
            </value>
            <value>
                <fullName>Karnal</fullName>
            </value>
            <value>
                <fullName>Bhiwandi</fullName>
            </value>
            <value>
                <fullName>Piao Minyari</fullName>
            </value>
            <value>
                <fullName>Bhind</fullName>
            </value>
            <value>
                <fullName>JabalPur</fullName>
            </value>
            <value>
                <fullName>Satna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>