force-app/main/default/objects/Account/validationRules/Account_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Source</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
OR(
ISPICKVAL( AccountSource, &apos;Web&apos;),
ISPICKVAL( AccountSource, &apos;Phone Inquiry&apos;),
ISPICKVAL( AccountSource, &apos;Partner Referral&apos;)
)
)</errorConditionFormula>
    <errorMessage>Please select any one of the following, WEB, Phone Inquiry, or Partner Referral.</errorMessage>
</ValidationRule>