force-app/main/default/objects/Account/validationRules/Count_Max_50.validationRule-meta.xml
<ValidationRule>
    <fullName>Count_Max_50</fullName>
    <active>false</active>
    <description>Check for Count__c value, Max 50.</description>
    <errorConditionFormula>Count__c &gt; 50</errorConditionFormula>
    <errorMessage>Value of Count cannot be more than 50.</errorMessage>
</ValidationRule>