force-app/main/default/objects/Account/validationRules/Ownership.validationRule-meta.xml
<ValidationRule>
    <fullName>Ownership</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISPICKVAL(Ownership, &apos;Public&apos;),
ISPICKVAL(Ownership, &apos;Private&apos;),
ISPICKVAL(Ownership, &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Ownership cannot be blank and should be other than Private and Public</errorMessage>
</ValidationRule>